[Modernize Code] Removed deprecated Double constructor usage